@@ -1,5 +1,11 @@
 2010-07-01  Alan Modra  <amodra@gmail.com>
 
+	* elf64-ppc.c (ppc64_elf_edit_toc): Use SYMBOL_CALLS_LOCAL rather
+	than SYMBOL_REFERENCES_LOCAL.
+	(ppc64_elf_relocate_section): Likewise.
+
+2010-07-01  Alan Modra  <amodra@gmail.com>
+
 	* elf64-ppc.c (ppc64_elf_edit_toc): Keep toc entries for ifuncs.
 
 2010-06-29  Alan Modra  <amodra@gmail.com>
